kubernetes1_project/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: nginx
spec:
  containers:
  - name: nginx-app
    image: nginx:1.14.2
    ports:
    - containerPort: 80
