kubernetes1_project/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-todo-app
  namespace: nginx
spec:
  containers:
  - name: django-todo-app
    image: nginx:1.14.2
    ports:
    - containerPort: 80
