kubernetes1_project/pod3_taints_addition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-tolerations
  namespace: nginx
spec:
  containers:
  - name: django-todo-app
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  tolerations:
    - key: "prod"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
